# bitcoin-rpc-codegen

./: .cursorrules  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  api.json  api_v29.json  api_v29_1.json  bitcoin-core-api.json  build.rs  build_codegen.rs  designNotes.md  e2e_generated.rs  justfile  real_api_v29.json  schema.json
_generator/: codegen.rs  versions.rs
_parser/: mod.rs
bitcoin-rpc-types/: Cargo.toml  LICENSE  README.md
bitcoin-rpc-types/src/: lib.rs  types.rs
cli/: Cargo.toml
cli/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
client/tests/: basic.rs
codegen/: Cargo.toml
codegen/src/: client_macros.rs  discover.rs  doc_comment_generator.rs  docs.rs  lib.rs  module_generator.rs  namespace_scaffolder.rs  response_type_generator.rs  rpc_client_generator.rs  rpc_method_discovery.rs  rpc_method_macro_generator.rs  test_node_generator.rs  transport_core_generator.rs  type_registry.rs  types.rs  utils.rs  versioning.rs  wallet_methods.rs
codegen/src/generators/: batch_builder.rs  client_trait.rs  doc_comment.rs  mod.rs  response_type.rs  rpc_client.rs  rpc_method_macro.rs
codegen/src/generators/test_node/: emit_combined_client.rs  emit_params.rs  emit_results.rs  emit_subclient.rs  mod.rs  utils.rs
codegen/src/generators/test_node/emit_helpers/: method_helpers_v28.rs  method_helpers_v29.rs  mod.rs
codegen/src/generators/test_node/versions/: mod.rs  v28.rs  v29.rs
codegen/tests/: basic.rs  client_trait.rs  compile_generated.rs  json_rpc_codegen.rs  transport_core_generator.rs  type_registry.rs
config/: Cargo.toml
config/src/: lib.rs
config/tests/: basic.rs
core/: Cargo.toml
core/src/: lib.rs
core/tests/: basic.rs
crates/cli/: Cargo.toml
crates/core/: Cargo.toml  build.rs
crates/core/resources/: api_v29.json
crates/core/resources/docs/v29/: abortrescan.txt  backupwallet.txt  createmultisig.txt  dumpwallet.txt  getaddressesbylabel.txt  getbalance.txt  getbestblockhash.txt  getblockfilter.txt  getblockfrompeer.txt  getdescriptorinfo.txt  getindexinfo.txt  getmemoryinfo.txt  getmininginfo.txt  getnewaddress.txt  getzmqnotifications.txt  listreceivedbyaddress.txt  removeprunedfunds.txt  scanblocks.txt  sendmany.txt  sendrawtransaction.txt  setban.txt  upgradewallet.txt  walletprocesspsbt.txt
crates/core/resources/docs/v29_docs/: analyzepsbt.txt  combinerawtransaction.txt  createrawtransaction.txt  createwallet.txt  createwalletdescriptor.txt  deriveaddresses.txt  enumeratesigners.txt  getaddressinfo.txt  getchaintips.txt  getchaintxstats.txt  gethdkeys.txt  getmempooldescendants.txt  getwalletinfo.txt  help.txt  importmulti.txt  joinpsbts.txt  listdescriptors.txt  listwalletdir.txt  loadwallet.txt  preciousblock.txt  prioritisetransaction.txt  scantxoutset.txt  signrawtransactionwithkey.txt  submitheader.txt  utxoupdatepsbt.txt
crates/core/resources/feedback/: getaddrmaninfo.json  getbalances.json  getbestblockhash.json  getblockchaininfo.json  getchainstates.json  getchaintips.json  getdifficulty.json  getmempoolinfo.json  getmininginfo.json  getnettotals.json  getnetworkinfo.json  getrpcinfo.json  getwalletinfo.json  listwalletdir.json  savemempool.json  stop.json
crates/core/src/: discover.rs  download.rs  error.rs  fetch.rs  generator.rs  lib.rs  schema.rs  version.rs
crates/core/src/parser/: mod.rs
crates/core/tests/: api_smoke.rs  discover.rs  e2e.rs  e2e_generated.rs  fetch_bitcoind.rs  generator_tests.rs  schema_tests.rs
docs/: architecture.mmd  designNotes.md  semantic-compression.md  structure.dot  structure.mmd  type-system.md  type_system.md
examples/: .rust-project.json  auto_client.rs  basic_client.rs  bootstrap_v29.rs  bootstrap_version.rs  compile_generated.rs  discover.rs  download_v29.rs  extract_api.rs  extract_api_v29.rs  generate.rs  generate_v29.rs  lib.rs  list_zero_arg.rs  parse_docs.rs  regenerate_schema.rs  regenerate_schema_v29.rs  validate_api.rs  validate_roundtrip.rs  validate_roundtrip_v29.rs  verify_all_methods.rs  verify_all_methods_v29.rs
examples/compile_generated_v29/: Cargo.toml  build.rs
examples/compile_generated_v29/src/: lib.rs
examples/compile_generated_v29/tests/: smoke.rs
fuzz/: Cargo.toml
fuzz/src/: lib.rs
integration-test/: Cargo.toml
integration-test/src/: lib.rs  test_node.rs
integration-test/tests/: basic_rpc_tests.rs  btc_node_integration_tests.rs  node_management_tests.rs  regtest_connection_test.rs
logging/: Cargo.toml
logging/src/: lib.rs
logging/tests/: basic.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
node/: Cargo.toml
node/src/: lib.rs  test_config.rs
node/tests/: basic.rs
parser/: Cargo.toml
parser/src/: cli_interface.rs  discover.rs  lib.rs
parser/tests/: basic.rs
pipeline/: Cargo.toml
pipeline/src/: lib.rs  main.rs
resources/: api_v29.json  bitcoin_core_binaries.txt
rpc-api/: Cargo.toml
rpc-cli/: Cargo.toml
rpc-cli/src/: lib.rs  main.rs
rpc-cli/tests/: basic.rs
rpc-metrics/: Cargo.toml
rpc_api/: Cargo.toml
rpc_metrics/: Cargo.toml
schema/: Cargo.toml
src/: CONTRIBUTING.md  Cargo.toml  client.rs  jest.config.js  lib.rs  local_serde_json.rs  main.rs  package.json  regtest.rs  tsconfig.json
src/bitcoin/: mod.rs
src/examples/: mining_demo.rs  run_mining_demo.sh
src/generator/: Cargo.toml  codegen.rs  mod.rs
src/generator/src/: main.rs
src/generator/src/generator/: code_generator.rs
src/node_client/: mod.rs
src/parser/: mod.rs
src/scripts/: update_from_bitcoin_core.sh
src/src/: converter.rs  index.ts  lib.rs  main.rs  parser.rs
src/src/client/: BitcoinRPC.ts
src/src/client/__tests__/: BitcoinRPC.test.ts
src/src/parser/: api_parser.rs  mod.rs
src/src/types/: rpc.ts
templates/: client_trait.rs  node.rs  transport.rs
tests/: e2e_generated.rs  e2e_test.rs  integration_tests.rs  roundtrip.rs  roundtrip_test.rs  smoke.rs
transport/: Cargo.toml
transport/src/: batch_transport.rs  lib.rs
transport/tests/: transport.rs
type-conversion/: Cargo.toml
type-registry/: Cargo.toml
types/: Cargo.toml
util/: Cargo.toml
util/src/: lib.rs
verify/: Cargo.toml
(+133 files in other folders)
