[package]
name = "bitcoin-rpc-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
external_bitcoin = { version = "0.32.5", package = "bitcoin" }
bitcoincore-rpc = "0.19.0"
tempfile = "3.10.0"
thiserror = "2.0.12"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
regex = "1.10"

[build-dependencies]
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
