[package]
name = "bitcoin-rpc-types"
version = "0.1.0"
edition = "2021"
description = "Shared Bitcoin RPC type definitions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/bitcoin-rpc-codegen"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = "2.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
