[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
transport = { path = "../transport" }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7.0"
