[package]
name = "codegen"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"

bitcoin-rpc-conversions = { path = "../../conversions" }
bitcoin-rpc-types = "0.1.0"

[dev-dependencies]
tempfile = "3.5.0"
tokio = { version = "1.36", features = ["full"] }
