[package]
name = "codegen"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

bitcoin-rpc-conversions = { path = "../../conversions" }
bitcoin-rpc-types = { path = "../../types" }

[dev-dependencies]
tempfile = "3.10.0"
tokio = { version = "1.47.1", features = ["full"] }