[package]
name = "config"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
thiserror = "2.0.17"
anyhow = "1.0.100"
dirs = "6.0.0"
bitcoin = { version = "0.32.6", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
