[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

node = { path = "../node" }
rpc-api = { path = "../rpc-api" }
transport = { path = "../transport" }
verify = { path = "../verify" }

[[test]]
name = "btc_node_integration_tests"
path = "tests/btc_node_integration_tests.rs"
harness = true
