[package]
name = "node"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bitcoin = "0.32.6"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0.12"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"

config = { path = "../config" }
# bitcoin-rpc-types = "0.1.0"
bitcoin-rpc-types = { path = "../../types" }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3.20"
