[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[features]
default = ["generated"]
generated = []

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"

config = { path = "../config" }
codegen = { path = "../codegen" }
logging = { path = "../logging" }
parser = { path = "../parser" }
rpc-api = { path = "../rpc-api" }
schema = { path = "../schema" }
transport = { path = "../transport" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = { version = "0.32.6", features = ["serde"] }

[lib]
name = "pipeline"
path = "src/lib.rs"

[[bin]]
name = "pipeline"
path = "src/main.rs"
