[package]
name = "pipeline"
version = "0.1.0"
license = "MIT"
edition = "2021"

[features]
default = ["generated"]
generated = []

[dependencies]
anyhow = "1.0"

codegen = { path = "../codegen" }
rpc-api = { path = "../rpc-api" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "pipeline"
path = "src/lib.rs"

[[bin]]
name = "pipeline"
path = "src/main.rs"
