[package]
name = "rpc-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive", "cargo"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
config = { path = "../config" }
logging = { path = "../logging" }
pipeline = { path = "../pipeline" }
rpc-metrics = { path = "../rpc-metrics" }

[dev-dependencies]
tempfile = "3.10.0"
