[package]
name = "bitcoin-rpc-codegen"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool for automatically generating version-specific Bitcoin RPC client code"
repository = "https://github.com/yourusername/bitcoin-rpc-codegen"
license = "CC0-1.0"
readme = "README.md"
keywords = ["bitcoin", "rpc", "code-generation", "api"]
categories = ["api-bindings", "cryptography", "development-tools"]

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "bitcoin-rpc-generator"
path = "src/main.rs"

[[example]]
name = "mining_demo"
path = "examples/mining_demo.rs"
