[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"

[dev-dependencies]
mockito = "1.7.0"                              # for HTTP mocking in tests
tokio = { version = "1", features = ["full"] }
