[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1", features = ["full"] }
