[package]
name = "bitcoin-rpc-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.31"
bitcoin = "0.32.5"
bitcoincore-rpc = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.0"
thiserror = "2.0.12"
regex = "1.10"


[build-dependencies]
anyhow = "1.0.98"
bitcoin = "0.32.5"
bitcoincore-rpc = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
