[package]
name = "compile_generated_v29"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
bitcoin_rpc_codegen = { package = "bitcoin-rpc-codegen", path = "../.." }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Make this example also a library for testing.
[lib]
name = "compile_generated_v29"
path = "src/lib.rs"

[[bin]]
name = "compile_generated_v29"
path = "src/main.rs"

# Add a test target
[[test]]
name = "smoke"
path = "tests/smoke.rs"
